@@ -1,3 +1,6 @@
+(Stuart Lewis)
+- SF Patch #1594208 for bug #1592984 Date comparisons strip time in org.dspace.harvest.Harvest
+
 (Scott Phillips)
 - Manakin eperson.patch adds API methods for searching epeople & groups.
 
